force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>