force-app/main/default/objects/Sales_Order__c/fields/Legacy_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_ID__c</fullName>
    <description>hold the external IDs from other systems, such as Roadnet SFDC or the Sylectus sources.</description>
    <externalId>true</externalId>
    <label>Legacy Source ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>