force-app/main/default/objects/Sales_Order__c/fields/Sales_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Date__c</fullName>
    <label>Sales Order Date</label>
    <type>Date</type>
</CustomField>